[package]
name = "polyfjord3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
zip = "2.1.3"
which = "6.0.1"
num_cpus = "1.16.0"
