[package]
name = "polyfjord3d"
version = "0.1.1"
edition = "2021"
default-run = "polyfjord3d"

[[bin]]
name = "modify_polyfjord_path"
path = "src/modify_path.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
zip = "2.1.3"
which = "6.0.1"
num_cpus = "1.16.0"
dirs = "5.0.1"
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[package.metadata.packager]
before-packaging-command = "cargo b -r"
identifier = "com.polyfjord.3d"
icons = ["assets/icon.ico"]
nsis = { installer-icon = "assets/icon.ico", template = "assets/nsis/installer.nsi" }
